Overlapping of container issue fixed

--- a/style/main.css
+++ b/style/main.css
@@ -160,12 +160,13 @@
      color:#fff;
 }
  .skills-w li>img {
-     width: 50px;
-     height: 50px;
-     display: inline-block;
-     text-align: left;
-     border: none;
-     outline: none;
+	 width: 50px;
+	 height: 50px;
+	 display: block;
+	 text-align: center;
+	 border: none;
+	 outline: none;
+	 margin: 0 auto;
 }
  .flex-container.skills-w li{
      text-align: center;
@@ -173,9 +174,10 @@
      min-width: 50px;
      margin: 10px 5px;
 }
- .skills-container{
+/* .skills-container{
      position: absolute;
      top: 0;
      left: 50%;
      transform: translate(-50%,0%);
 }
+*/
